--- a/locale/es.po
+++ b/locale/es.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -21,6 +21,10 @@ msgid ""
 msgstr ""
 "No se ha encontrado ningún plazo de pago para la factura de contrato del "
 "cliente \"%(customer)s\"."
+
+msgctxt "error:contract.consumption:"
+msgid "Please, configure a journal before creating contract invoices."
+msgstr "Por favor, configura el diario antes de crear facturas."
 
 msgctxt "error:contract.consumption:"
 msgid ""
@@ -74,7 +78,7 @@ msgstr "Fecha creación"
 
 msgctxt "field:contract,create_uid:"
 msgid "Create User"
-msgstr "Usuario creación"
+msgstr "Usuario de creación"
 
 msgctxt "field:contract,currency:"
 msgid "Currency"
@@ -134,11 +138,11 @@ msgstr "Estado"
 
 msgctxt "field:contract,write_date:"
 msgid "Write Date"
-msgstr "Fecha modificación"
+msgstr "Fecha de modificación"
 
 msgctxt "field:contract,write_uid:"
 msgid "Write User"
-msgstr "Usuario modificación"
+msgstr "Usuario de modificación"
 
 msgctxt "field:contract.configuration,contract_sequence:"
 msgid "Contract Reference Sequence"
@@ -150,11 +154,15 @@ msgstr "Fecha creación"
 
 msgctxt "field:contract.configuration,create_uid:"
 msgid "Create User"
-msgstr "Usuario creación"
+msgstr "Usuario de creación"
 
 msgctxt "field:contract.configuration,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:contract.configuration,journal:"
+msgid "Journal"
+msgstr "Diario"
 
 msgctxt "field:contract.configuration,rec_name:"
 msgid "Name"
@@ -162,11 +170,11 @@ msgstr "Nombre"
 
 msgctxt "field:contract.configuration,write_date:"
 msgid "Write Date"
-msgstr "Fecha modificación"
+msgstr "Fecha de modificación"
 
 msgctxt "field:contract.configuration,write_uid:"
 msgid "Write User"
-msgstr "Usuario modificación"
+msgstr "Usuario de modificación"
 
 msgctxt "field:contract.consumption,contract:"
 msgid "Contract"
@@ -182,7 +190,7 @@ msgstr "Fecha creación"
 
 msgctxt "field:contract.consumption,create_uid:"
 msgid "Create User"
-msgstr "Usuario creación"
+msgstr "Usuario de creación"
 
 msgctxt "field:contract.consumption,credit_lines:"
 msgid "Credit Lines"
@@ -222,11 +230,11 @@ msgstr "Fecha inicial"
 
 msgctxt "field:contract.consumption,write_date:"
 msgid "Write Date"
-msgstr "Fecha modificación"
+msgstr "Fecha de modificación"
 
 msgctxt "field:contract.consumption,write_uid:"
 msgid "Write User"
-msgstr "Usuario modificación"
+msgstr "Usuario de modificación"
 
 msgctxt "field:contract.create_consumptions.start,date:"
 msgid "Date"
@@ -262,7 +270,7 @@ msgstr "Fecha creación"
 
 msgctxt "field:contract.line,create_uid:"
 msgid "Create User"
-msgstr "Usuario creación"
+msgstr "Usuario de creación"
 
 msgctxt "field:contract.line,description:"
 msgid "Description"
@@ -306,11 +314,11 @@ msgstr "Precio unidad"
 
 msgctxt "field:contract.line,write_date:"
 msgid "Write Date"
-msgstr "Fecha modificación"
+msgstr "Fecha de modificación"
 
 msgctxt "field:contract.line,write_uid:"
 msgid "Write User"
-msgstr "Usuario modificación"
+msgstr "Usuario de modificación"
 
 msgctxt "field:contract.service,create_date:"
 msgid "Create Date"
@@ -318,7 +326,7 @@ msgstr "Fecha creación"
 
 msgctxt "field:contract.service,create_uid:"
 msgid "Create User"
-msgstr "Usuario creación"
+msgstr "Usuario de creación"
 
 msgctxt "field:contract.service,id:"
 msgid "ID"
@@ -338,11 +346,11 @@ msgstr "Nombre"
 
 msgctxt "field:contract.service,write_date:"
 msgid "Write Date"
-msgstr "Fecha modificación"
+msgstr "Fecha de modificación"
 
 msgctxt "field:contract.service,write_uid:"
 msgid "Write User"
-msgstr "Usuario modificación"
+msgstr "Usuario de modificación"
 
 msgctxt "field:party.party,contract_grouping_method:"
 msgid "Contract Grouping Method"
@@ -577,24 +585,12 @@ msgid "Contract Configuration"
 msgstr "Configuración de contratos"
 
 msgctxt "view:contract.consumption:"
-msgid "Contract Consumption"
-msgstr "Consumo de contratos"
-
-msgctxt "view:contract.consumption:"
 msgid "Invoice"
 msgstr "Factura"
 
 msgctxt "view:contract.create_consumptions.start:"
-msgid "Create Consumptions"
-msgstr "Crear consumos"
-
-msgctxt "view:contract.create_consumptions.start:"
-msgid "Create consumptions up to"
-msgstr "Crear consumos hasta la"
-
-msgctxt "view:contract.create_invoices.start:"
-msgid "Create Invoices"
-msgstr "Crear facturas"
+msgid "Create Contract Consumptions up to"
+msgstr "Crear consumos desde"
 
 msgctxt "view:contract.create_invoices.start:"
 msgid "Create invoices up to"
