--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+Version 4.9 - 2018-04-25
+Version 4.9 - 2018-04-25
 Version 3.8.0 - 2015-12-09
 * Add sequence on contract lines
 * Make contracts start date and end date functional fields based on lines
