Manage Replace Wizard and check pending contract to erase party issue5820 issue7169 #036415

--- a/locale/ca.po
+++ b/locale/ca.po
@@ -60,6 +60,14 @@ msgstr ""
 "La data d'inici és obligatòria en la línia \"%(line)s\" del contracte "
 "\"%(contract)s\"."
 
+msgctxt "error:party.erase:"
+msgid ""
+"The party \"%(party)s\" can not be erased because he has pending contracts for "
+"the company \"%(company)s\"."
+msgstr ""
+"No es pot eliminar el tercer \"%(party)s\" perquè té contractes pendents per "
+"l'empresa \"%(company)s\"."
+
 msgctxt "field:account.invoice.credit.start,from_contract:"
 msgid "From Contract"
 msgstr "Provinent de contracte"
