--- a/locale/es.po
+++ b/locale/es.po
@@ -60,6 +60,14 @@ msgstr ""
 "La fecha de inicio es obligatoria en la línea \"%(line)s\" del contrato "
 "\"%(contract)s\"."
 
+msgctxt "error:party.erase:"
+msgid ""
+"The party \"%(party)s\" can not be erased because he has pending contracts for "
+"the company \"%(company)s\"."
+msgstr ""
+"No se puede eliminar el tercero \"%(party)s\" porqué tiene contractos pendientes"
+" para la empresa \"%(company)s\"."
+
 msgctxt "field:account.invoice.credit.start,from_contract:"
 msgid "From Contract"
 msgstr "Proveniente de contrato"
